--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,17 @@
             "AsemAlalami\\LaravelAdvancedFilter\\": "src"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "AsemAlalami\\LaravelAdvancedFilter\\Test\\": "tests"
+        }
+    },
     "require": {
         "ext-json": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "8.5.x-dev",
+        "orchestra/testbench": "5.x-dev"
     },
     "extra": {
         "laravel": {
