--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,11 @@
 {
     "name": "asemalalami/laravel-advanced-filter",
     "description": "Laravel Advanced Filter",
+    "keywords": [
+        "laravel",
+        "filter",
+        "filters"
+    ],
     "type": "project",
     "license": "MIT",
     "authors": [
@@ -21,7 +26,9 @@
         }
     },
     "require": {
-        "ext-json": "*"
+        "ext-json": "*",
+        "illuminate/database": "^5.7|^6.0|^7.0|^8.0",
+        "illuminate/support": "^5.7|^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "8.5.x-dev",
