--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         php: [ 7.2, 7.3, 7.4 ]
         laravel: [ 5.7.*, 5.8.*, 6.*, 7.*, 8.* ]
-        dependency-version: [ prefer-stable ]
+        dependency-version: [ prefer-lowest ]
         include:
           - laravel: 5.7.*
             testbench: 3.7.*
