--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,19 +13,15 @@ jobs:
     strategy:
       matrix:
         php: [ 7.2, 7.3, 7.4 ]
-        laravel: [ 5.7.*, 5.8.*, 6.*, 7.*, 8.* ]
+        laravel: [ 5.8.*, 6.*, 7.* ]
         dependency-version: [ prefer-lowest ]
         include:
-          - laravel: 5.7.*
-            testbench: 3.7.*
-          - laravel: 5.8.*
-            testbench: 3.8.*
-          - laravel: 6.*
-            testbench: 4.*
           - laravel: 7.*
             testbench: 5.*
-          - laravel: 8.*
-            testbench: 6.*
+          - laravel: 6.*
+            testbench: 4.*
+          - laravel: 5.8.*
+            testbench: 3.8.*
 
     steps:
       - name: Checkout code
