--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,11 +13,9 @@ jobs:
     strategy:
       matrix:
         php: [ 7.2, 7.3, 7.4 ]
-        laravel: [ 5.8.*, 6.*, 7.* ]
+        laravel: [ 5.8.*, 6.* ]
         dependency-version: [ prefer-lowest ]
         include:
-          - laravel: 7.*
-            testbench: 5.*
           - laravel: 6.*
             testbench: 4.*
           - laravel: 5.8.*
