--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
+    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.env }}
     strategy:
       fail-fast: true
       max-parallel: 4
@@ -17,6 +17,9 @@ jobs:
         php: [ 7.3 ]
         laravel: [ 5.8.*, 6.*, 7.*, 8.* ]
         dependency-version: [ prefer-stable ]
+        env:
+          - { DB_CONNECTION: 'sqlite', DB_DATABASE: ':memory:' }
+          - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root', DB_PASSWORD: 'root' }
         include:
           - laravel: 8.*
             testbench: 6.*
@@ -26,6 +29,8 @@ jobs:
             testbench: 4.*
           - laravel: 5.8.*
             testbench: 3.8.*
+
+    env: ${{ matrix.env }}
 
     steps:
       - name: Checkout code
