--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,10 +9,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.env }}
+    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.env.DB_CONNECTION }}
     strategy:
       fail-fast: true
-      max-parallel: 4
+      max-parallel: 1
       matrix:
         php: [ 7.3 ]
         laravel: [ 5.8.*, 6.*, 7.*, 8.* ]
@@ -46,6 +46,18 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
+
+      - name: Shutdown Ubuntu MySQL (SUDO)
+          if: ${{env.DB_CONNECTION == 'mysql'}}
+          run: sudo service mysql stop # Shutdown the Default MySQL, "sudo" is necessary, please not remove it
+
+      - name: Setup MySQL
+        if: ${{env.DB_CONNECTION == 'mysql'}}
+        uses: mirromutth/mysql-action@v1.1
+        with:
+          mysql user: root
+          mysql password: password
+          mysql database: test
 
       - name: Install dependencies
         run: |
