--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,7 +19,7 @@ jobs:
         dependency-version: [ prefer-stable ]
         env:
           - { DB_CONNECTION: 'sqlite', DB_DATABASE: ':memory:' }
-          - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root', DB_PASSWORD: 'root' }
+          - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root', DB_PASSWORD: 'password' }
         include:
           - laravel: 8.*
             testbench: 6.*
@@ -48,8 +48,8 @@ jobs:
           php-version: ${{ matrix.php }}
 
       - name: Shutdown Ubuntu MySQL (SUDO)
-          if: ${{env.DB_CONNECTION == 'mysql'}}
-          run: sudo service mysql stop # Shutdown the Default MySQL, "sudo" is necessary, please not remove it
+        if: ${{env.DB_CONNECTION == 'mysql'}}
+        run: sudo service mysql stop # Shutdown the Default MySQL, "sudo" is necessary, please not remove it
 
       - name: Setup MySQL
         if: ${{env.DB_CONNECTION == 'mysql'}}
