--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,7 +18,6 @@ jobs:
         laravel: [ 5.8.*, 6.*, 7.*, 8.* ]
         dependency-version: [ prefer-stable ]
         env:
-          - { DB_CONNECTION: 'sqlite', DB_DATABASE: ':memory:' }
           - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root', DB_PASSWORD: 'password' }
         include:
           - laravel: 8.*
@@ -55,9 +54,9 @@ jobs:
         if: ${{env.DB_CONNECTION == 'mysql'}}
         uses: mirromutth/mysql-action@v1.1
         with:
-          mysql user: root
-          mysql password: password
-          mysql database: test
+          mysql user: ${{ env.DB_USERNAME }}
+          mysql password: ${{ env.DB_PASSWORD }}
+          mysql database: ${{ env.DB_DATABASE }}
 
       - name: Install dependencies
         run: |
