--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,7 +18,7 @@ jobs:
         laravel: [ 5.8.*, 6.*, 7.*, 8.* ]
         dependency-version: [ prefer-stable ]
         env:
-          - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root' }
+          - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root', DB_PASSWORD: 'password' }
         include:
           - laravel: 8.*
             testbench: 6.*
@@ -30,15 +30,6 @@ jobs:
             testbench: 3.8.*
 
     env: ${{ matrix.env }}
-
-    services:
-      mysql:
-        image: mysql:5.7
-        env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_DATABASE: test
-        ports:
-          - 3306
 
     steps:
       - name: Checkout code
@@ -55,6 +46,14 @@ jobs:
         with:
           php-version: ${{ matrix.php }}
 
+      - name: Setup MySQL
+        uses: mirromutth/mysql-action@v1.1
+        with:
+          host port: 3306
+          mysql version: '5.7'
+          mysql user: 'root'
+          mysql password: 'password'
+
       - name: Install dependencies
         run: |
           composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
@@ -63,4 +62,4 @@ jobs:
       - name: Execute tests
         run: vendor/bin/phpunit
         env:
-          DB_PORT: ${{ job.services.mysql.ports[3306] }}
+          DB_PORT: 3306
