--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,7 +18,8 @@ jobs:
         laravel: [ 5.8.*, 6.*, 7.*, 8.* ]
         dependency-version: [ prefer-stable ]
         env:
-          - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root', DB_PASSWORD: 'password' }
+          - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root', DB_PORT: 3306 }
+          - { DB_CONNECTION: 'sqlite', DB_DATABASE: ':memory:' }
         include:
           - laravel: 8.*
             testbench: 6.*
@@ -30,6 +31,16 @@ jobs:
             testbench: 3.8.*
 
     env: ${{ matrix.env }}
+
+    services:
+      if: ${{matrix.env.DB_CONNECTION == 'mysql'}}
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: test
+        ports:
+          - 3306
 
     steps:
       - name: Checkout code
@@ -46,14 +57,6 @@ jobs:
         with:
           php-version: ${{ matrix.php }}
 
-      - name: Setup MySQL
-        uses: mirromutth/mysql-action@v1.1
-        with:
-          host port: 3306
-          mysql version: '5.7'
-          mysql user: 'root'
-          mysql password: 'password'
-
       - name: Install dependencies
         run: |
           composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
@@ -61,5 +64,3 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/phpunit
-        env:
-          DB_PORT: 3306
