--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -63,3 +63,5 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/phpunit
+        env:
+          DB_PORT: ${{ job.services.mysql.ports[3306] }}
