--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -64,4 +64,4 @@ jobs:
       - name: Execute tests
         run: vendor/bin/phpunit
         env:
-          DB_PORT: ${{ job.services.mysql.ports[3306] }}
+          DB_PORT: ${{ env.DB_PORT }}
