--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - ${{ matrix.env.DB_CONNECTION }}
+    name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }} - DB ${{ matrix.env.DB_CONNECTION }}
     strategy:
       fail-fast: true
       max-parallel: 1
@@ -18,7 +18,7 @@ jobs:
         laravel: [ 5.8.*, 6.*, 7.*, 8.* ]
         dependency-version: [ prefer-stable ]
         env:
-          - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root', DB_PORT: 3307 }
+          - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root', DB_PORT: 3306 }
           - { DB_CONNECTION: 'sqlite', DB_DATABASE: ':memory:' }
         include:
           - laravel: 8.*
@@ -39,7 +39,11 @@ jobs:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: test
         ports:
-          - 3307:3306
+          - 3306:3306
+      mongo:
+        image: mongo:4.0
+        ports:
+          - 27017:27017
 
     steps:
       - name: Checkout code
