--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,17 +18,22 @@ jobs:
         laravel: [ 5.8.*, 6.*, 7.*, 8.* ]
         dependency-version: [ prefer-stable ]
         env:
-          - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root', DB_PORT: 3306 }
+          - { DB_CONNECTION: 'mongo', DB_DATABASE: 'test', DB_PORT: 27017 }
           - { DB_CONNECTION: 'sqlite', DB_DATABASE: ':memory:' }
+          - { DB_CONNECTION: 'mysql', DB_DATABASE: 'test', DB_USERNAME: 'root', DB_PORT: 3306 }
         include:
           - laravel: 8.*
             testbench: 6.*
+            mongodb: 3.8.*
           - laravel: 7.*
             testbench: 5.*
+            mongodb: 3.7.*
           - laravel: 6.*
             testbench: 4.*
+            mongodb: 3.6.*
           - laravel: 5.8.*
             testbench: 3.8.*
+            mongodb: 3.5.*
 
     env: ${{ matrix.env }}
 
@@ -62,7 +67,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "jenssegers/mongodb:${{ matrix.mongodb }}" --no-interaction --no-update
           composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
 
       - name: Execute tests
